// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render a disabled button 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  width: auto;
  padding: 0.8rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.4rem;
  color: hsl(0,100%,100%);
  cursor: pointer;
  outline: none;
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  color: hsl(213,17%,20%);
  background: none;
  padding: 0.8rem 1.6rem;
  cursor: not-allowed;
  opacity: 0.4;
}

.c0 svg > path {
  fill: hsl(0,100%,100%);
}

.c0 svg > path {
  fill: hsl(213,17%,20%);
}

<Styled(Button)
  disabled={true}
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "1.6rem",
          "bigInt": 1.6,
          "default": "1.2rem",
          "defaultInt": 1.2,
          "h1": "3.6rem",
          "h1Int": 3.6,
          "h2": "3rem",
          "h2Int": 3,
          "h3": "2.6rem",
          "h3Int": 2.6,
          "h4": "2.2rem",
          "h4Int": 2.2,
          "h5": "2.0rem",
          "h5Int": 2,
          "h6": "1.8rem",
          "h6Int": 1.8,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.4rem",
          "mediumInt": 1.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "avatar": Object {
          "alizarin": "hsl(6, 78%, 57%)",
          "carrot": "hsl(28, 80%, 52%)",
          "emerald": "hsl(145, 63%, 49%)",
          "river": "hsl(204, 70%, 53%)",
          "turquoise": "hsl(168, 76%, 42%)",
          "wisteria": "hsl(282, 44%, 47%)",
        },
        "black": "hsl(0, 0%, 0%)",
        "bodyBackground": "hsl(240, 33%, 99%)",
        "darkBlue": "hsl(213, 17%, 20%)",
        "darkGrey": "hsl(206,16%,60%)",
        "failure": Object {
          "dark": "#e74432",
          "darker": "#e42f1b",
          "default": "hsl(6, 79%, 65%)",
        },
        "googleBrandRed": "hsl(5, 81%, 56%)",
        "lightGrey": "hsl(207,22%,90%)",
        "mediumGrey": "hsl(206,23%,69%)",
        "mysticGrey": "hsl(216,45%,98%)",
        "paleGrey": "hsl(240, 33%, 99%)",
        "primary": Object {
          "dark": "#1873a0",
          "darker": "#14638a",
          "default": "hsl(200, 74%, 46%)",
        },
        "secondary": Object {
          "default": "hsl(0, 100%, 100%)",
        },
        "spaceGrey": "hsl(207,13%,45%)",
        "success": Object {
          "dark": "#6da333",
          "darker": "#60902d",
          "default": "hsl(89, 53%, 52%)",
        },
        "veryLightBlue": "hsl(220, 27%, 94%)",
        "warning": Object {
          "dark": "#f59a24",
          "darker": "#f48f0b",
          "default": "hsl(34, 91%, 65%)",
        },
        "white": "hsl(0, 100%, 100%)",
        "whiteOpacity": [Function],
      },
    }
  }
>
  <Button
    appearance="default"
    className=""
    disabled={true}
    fluid={false}
    icon={null}
    iconPosition="left"
    onClick={[Function]}
    size="default"
    theme={
      Object {
        "breakpoints": Object {
          "lg": 992,
          "md": 768,
          "sm": 576,
          "xl": 1200,
          "xs": 0,
        },
        "dimensions": Object {
          "big": "3.1rem",
          "bigInt": 3.1,
          "huge": "4.5rem",
          "hugeInt": 4.5,
          "medium": "1.5rem",
          "mediumInt": 1.5,
          "radius": "0.4rem",
          "radiusInt": 0.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "fonts": Object {
          "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
          "size": Object {
            "big": "1.6rem",
            "bigInt": 1.6,
            "default": "1.2rem",
            "defaultInt": 1.2,
            "h1": "3.6rem",
            "h1Int": 3.6,
            "h2": "3rem",
            "h2Int": 3,
            "h3": "2.6rem",
            "h3Int": 2.6,
            "h4": "2.2rem",
            "h4Int": 2.2,
            "h5": "2.0rem",
            "h5Int": 2,
            "h6": "1.8rem",
            "h6Int": 1.8,
            "huge": "6.4rem",
            "hugeInt": 6.4,
            "medium": "1.4rem",
            "mediumInt": 1.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "spacing": Object {
            "big": "1.5px",
            "medium": "1px",
            "small": "0.5px",
          },
          "weight": Object {
            "normal": 400,
            "thick": 600,
            "thin": 200,
          },
        },
        "palette": Object {
          "avatar": Object {
            "alizarin": "hsl(6, 78%, 57%)",
            "carrot": "hsl(28, 80%, 52%)",
            "emerald": "hsl(145, 63%, 49%)",
            "river": "hsl(204, 70%, 53%)",
            "turquoise": "hsl(168, 76%, 42%)",
            "wisteria": "hsl(282, 44%, 47%)",
          },
          "black": "hsl(0, 0%, 0%)",
          "bodyBackground": "hsl(240, 33%, 99%)",
          "darkBlue": "hsl(213, 17%, 20%)",
          "darkGrey": "hsl(206,16%,60%)",
          "failure": Object {
            "dark": "#e74432",
            "darker": "#e42f1b",
            "default": "hsl(6, 79%, 65%)",
          },
          "googleBrandRed": "hsl(5, 81%, 56%)",
          "lightGrey": "hsl(207,22%,90%)",
          "mediumGrey": "hsl(206,23%,69%)",
          "mysticGrey": "hsl(216,45%,98%)",
          "paleGrey": "hsl(240, 33%, 99%)",
          "primary": Object {
            "dark": "#1873a0",
            "darker": "#14638a",
            "default": "hsl(200, 74%, 46%)",
          },
          "secondary": Object {
            "default": "hsl(0, 100%, 100%)",
          },
          "spaceGrey": "hsl(207,13%,45%)",
          "success": Object {
            "dark": "#6da333",
            "darker": "#60902d",
            "default": "hsl(89, 53%, 52%)",
          },
          "veryLightBlue": "hsl(220, 27%, 94%)",
          "warning": Object {
            "dark": "#f59a24",
            "darker": "#f48f0b",
            "default": "hsl(34, 91%, 65%)",
          },
          "white": "hsl(0, 100%, 100%)",
          "whiteOpacity": [Function],
        },
      }
    }
    type="button"
  >
    <styled.button
      appearance="default"
      className=""
      disabled={true}
      fluid={false}
      icon={null}
      iconPosition="left"
      onClick={[Function]}
      size="default"
      theme={
        Object {
          "breakpoints": Object {
            "lg": 992,
            "md": 768,
            "sm": 576,
            "xl": 1200,
            "xs": 0,
          },
          "dimensions": Object {
            "big": "3.1rem",
            "bigInt": 3.1,
            "huge": "4.5rem",
            "hugeInt": 4.5,
            "medium": "1.5rem",
            "mediumInt": 1.5,
            "radius": "0.4rem",
            "radiusInt": 0.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "fonts": Object {
            "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
            "size": Object {
              "big": "1.6rem",
              "bigInt": 1.6,
              "default": "1.2rem",
              "defaultInt": 1.2,
              "h1": "3.6rem",
              "h1Int": 3.6,
              "h2": "3rem",
              "h2Int": 3,
              "h3": "2.6rem",
              "h3Int": 2.6,
              "h4": "2.2rem",
              "h4Int": 2.2,
              "h5": "2.0rem",
              "h5Int": 2,
              "h6": "1.8rem",
              "h6Int": 1.8,
              "huge": "6.4rem",
              "hugeInt": 6.4,
              "medium": "1.4rem",
              "mediumInt": 1.4,
              "small": "0.7rem",
              "smallInt": 0.7,
              "tiny": "0.3rem",
              "tinyInt": 0.3,
            },
            "spacing": Object {
              "big": "1.5px",
              "medium": "1px",
              "small": "0.5px",
            },
            "weight": Object {
              "normal": 400,
              "thick": 600,
              "thin": 200,
            },
          },
          "palette": Object {
            "avatar": Object {
              "alizarin": "hsl(6, 78%, 57%)",
              "carrot": "hsl(28, 80%, 52%)",
              "emerald": "hsl(145, 63%, 49%)",
              "river": "hsl(204, 70%, 53%)",
              "turquoise": "hsl(168, 76%, 42%)",
              "wisteria": "hsl(282, 44%, 47%)",
            },
            "black": "hsl(0, 0%, 0%)",
            "bodyBackground": "hsl(240, 33%, 99%)",
            "darkBlue": "hsl(213, 17%, 20%)",
            "darkGrey": "hsl(206,16%,60%)",
            "failure": Object {
              "dark": "#e74432",
              "darker": "#e42f1b",
              "default": "hsl(6, 79%, 65%)",
            },
            "googleBrandRed": "hsl(5, 81%, 56%)",
            "lightGrey": "hsl(207,22%,90%)",
            "mediumGrey": "hsl(206,23%,69%)",
            "mysticGrey": "hsl(216,45%,98%)",
            "paleGrey": "hsl(240, 33%, 99%)",
            "primary": Object {
              "dark": "#1873a0",
              "darker": "#14638a",
              "default": "hsl(200, 74%, 46%)",
            },
            "secondary": Object {
              "default": "hsl(0, 100%, 100%)",
            },
            "spaceGrey": "hsl(207,13%,45%)",
            "success": Object {
              "dark": "#6da333",
              "darker": "#60902d",
              "default": "hsl(89, 53%, 52%)",
            },
            "veryLightBlue": "hsl(220, 27%, 94%)",
            "warning": Object {
              "dark": "#f59a24",
              "darker": "#f48f0b",
              "default": "hsl(34, 91%, 65%)",
            },
            "white": "hsl(0, 100%, 100%)",
            "whiteOpacity": [Function],
          },
        }
      }
      type="button"
    >
      <button
        className="c0"
        disabled={true}
        icon={null}
        onClick={[Function]}
        size="default"
        type="button"
      >
        Text
      </button>
    </styled.button>
  </Button>
</Styled(Button)>
`;

exports[`<Button /> should render a fluid button 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  width: 100%;
  padding: 0.8rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.4rem;
  color: hsl(0,100%,100%);
  cursor: pointer;
  outline: none;
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  color: hsl(213,17%,20%);
  background: none;
  padding: 0.8rem 1.6rem;
}

.c0 svg > path {
  fill: hsl(0,100%,100%);
}

.c0 svg > path {
  fill: hsl(213,17%,20%);
}

<Styled(Button)
  fluid={true}
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "1.6rem",
          "bigInt": 1.6,
          "default": "1.2rem",
          "defaultInt": 1.2,
          "h1": "3.6rem",
          "h1Int": 3.6,
          "h2": "3rem",
          "h2Int": 3,
          "h3": "2.6rem",
          "h3Int": 2.6,
          "h4": "2.2rem",
          "h4Int": 2.2,
          "h5": "2.0rem",
          "h5Int": 2,
          "h6": "1.8rem",
          "h6Int": 1.8,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.4rem",
          "mediumInt": 1.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "avatar": Object {
          "alizarin": "hsl(6, 78%, 57%)",
          "carrot": "hsl(28, 80%, 52%)",
          "emerald": "hsl(145, 63%, 49%)",
          "river": "hsl(204, 70%, 53%)",
          "turquoise": "hsl(168, 76%, 42%)",
          "wisteria": "hsl(282, 44%, 47%)",
        },
        "black": "hsl(0, 0%, 0%)",
        "bodyBackground": "hsl(240, 33%, 99%)",
        "darkBlue": "hsl(213, 17%, 20%)",
        "darkGrey": "hsl(206,16%,60%)",
        "failure": Object {
          "dark": "#e74432",
          "darker": "#e42f1b",
          "default": "hsl(6, 79%, 65%)",
        },
        "googleBrandRed": "hsl(5, 81%, 56%)",
        "lightGrey": "hsl(207,22%,90%)",
        "mediumGrey": "hsl(206,23%,69%)",
        "mysticGrey": "hsl(216,45%,98%)",
        "paleGrey": "hsl(240, 33%, 99%)",
        "primary": Object {
          "dark": "#1873a0",
          "darker": "#14638a",
          "default": "hsl(200, 74%, 46%)",
        },
        "secondary": Object {
          "default": "hsl(0, 100%, 100%)",
        },
        "spaceGrey": "hsl(207,13%,45%)",
        "success": Object {
          "dark": "#6da333",
          "darker": "#60902d",
          "default": "hsl(89, 53%, 52%)",
        },
        "veryLightBlue": "hsl(220, 27%, 94%)",
        "warning": Object {
          "dark": "#f59a24",
          "darker": "#f48f0b",
          "default": "hsl(34, 91%, 65%)",
        },
        "white": "hsl(0, 100%, 100%)",
        "whiteOpacity": [Function],
      },
    }
  }
>
  <Button
    appearance="default"
    className=""
    disabled={false}
    fluid={true}
    icon={null}
    iconPosition="left"
    onClick={[Function]}
    size="default"
    theme={
      Object {
        "breakpoints": Object {
          "lg": 992,
          "md": 768,
          "sm": 576,
          "xl": 1200,
          "xs": 0,
        },
        "dimensions": Object {
          "big": "3.1rem",
          "bigInt": 3.1,
          "huge": "4.5rem",
          "hugeInt": 4.5,
          "medium": "1.5rem",
          "mediumInt": 1.5,
          "radius": "0.4rem",
          "radiusInt": 0.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "fonts": Object {
          "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
          "size": Object {
            "big": "1.6rem",
            "bigInt": 1.6,
            "default": "1.2rem",
            "defaultInt": 1.2,
            "h1": "3.6rem",
            "h1Int": 3.6,
            "h2": "3rem",
            "h2Int": 3,
            "h3": "2.6rem",
            "h3Int": 2.6,
            "h4": "2.2rem",
            "h4Int": 2.2,
            "h5": "2.0rem",
            "h5Int": 2,
            "h6": "1.8rem",
            "h6Int": 1.8,
            "huge": "6.4rem",
            "hugeInt": 6.4,
            "medium": "1.4rem",
            "mediumInt": 1.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "spacing": Object {
            "big": "1.5px",
            "medium": "1px",
            "small": "0.5px",
          },
          "weight": Object {
            "normal": 400,
            "thick": 600,
            "thin": 200,
          },
        },
        "palette": Object {
          "avatar": Object {
            "alizarin": "hsl(6, 78%, 57%)",
            "carrot": "hsl(28, 80%, 52%)",
            "emerald": "hsl(145, 63%, 49%)",
            "river": "hsl(204, 70%, 53%)",
            "turquoise": "hsl(168, 76%, 42%)",
            "wisteria": "hsl(282, 44%, 47%)",
          },
          "black": "hsl(0, 0%, 0%)",
          "bodyBackground": "hsl(240, 33%, 99%)",
          "darkBlue": "hsl(213, 17%, 20%)",
          "darkGrey": "hsl(206,16%,60%)",
          "failure": Object {
            "dark": "#e74432",
            "darker": "#e42f1b",
            "default": "hsl(6, 79%, 65%)",
          },
          "googleBrandRed": "hsl(5, 81%, 56%)",
          "lightGrey": "hsl(207,22%,90%)",
          "mediumGrey": "hsl(206,23%,69%)",
          "mysticGrey": "hsl(216,45%,98%)",
          "paleGrey": "hsl(240, 33%, 99%)",
          "primary": Object {
            "dark": "#1873a0",
            "darker": "#14638a",
            "default": "hsl(200, 74%, 46%)",
          },
          "secondary": Object {
            "default": "hsl(0, 100%, 100%)",
          },
          "spaceGrey": "hsl(207,13%,45%)",
          "success": Object {
            "dark": "#6da333",
            "darker": "#60902d",
            "default": "hsl(89, 53%, 52%)",
          },
          "veryLightBlue": "hsl(220, 27%, 94%)",
          "warning": Object {
            "dark": "#f59a24",
            "darker": "#f48f0b",
            "default": "hsl(34, 91%, 65%)",
          },
          "white": "hsl(0, 100%, 100%)",
          "whiteOpacity": [Function],
        },
      }
    }
    type="button"
  >
    <styled.button
      appearance="default"
      className=""
      disabled={false}
      fluid={true}
      icon={null}
      iconPosition="left"
      onClick={[Function]}
      size="default"
      theme={
        Object {
          "breakpoints": Object {
            "lg": 992,
            "md": 768,
            "sm": 576,
            "xl": 1200,
            "xs": 0,
          },
          "dimensions": Object {
            "big": "3.1rem",
            "bigInt": 3.1,
            "huge": "4.5rem",
            "hugeInt": 4.5,
            "medium": "1.5rem",
            "mediumInt": 1.5,
            "radius": "0.4rem",
            "radiusInt": 0.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "fonts": Object {
            "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
            "size": Object {
              "big": "1.6rem",
              "bigInt": 1.6,
              "default": "1.2rem",
              "defaultInt": 1.2,
              "h1": "3.6rem",
              "h1Int": 3.6,
              "h2": "3rem",
              "h2Int": 3,
              "h3": "2.6rem",
              "h3Int": 2.6,
              "h4": "2.2rem",
              "h4Int": 2.2,
              "h5": "2.0rem",
              "h5Int": 2,
              "h6": "1.8rem",
              "h6Int": 1.8,
              "huge": "6.4rem",
              "hugeInt": 6.4,
              "medium": "1.4rem",
              "mediumInt": 1.4,
              "small": "0.7rem",
              "smallInt": 0.7,
              "tiny": "0.3rem",
              "tinyInt": 0.3,
            },
            "spacing": Object {
              "big": "1.5px",
              "medium": "1px",
              "small": "0.5px",
            },
            "weight": Object {
              "normal": 400,
              "thick": 600,
              "thin": 200,
            },
          },
          "palette": Object {
            "avatar": Object {
              "alizarin": "hsl(6, 78%, 57%)",
              "carrot": "hsl(28, 80%, 52%)",
              "emerald": "hsl(145, 63%, 49%)",
              "river": "hsl(204, 70%, 53%)",
              "turquoise": "hsl(168, 76%, 42%)",
              "wisteria": "hsl(282, 44%, 47%)",
            },
            "black": "hsl(0, 0%, 0%)",
            "bodyBackground": "hsl(240, 33%, 99%)",
            "darkBlue": "hsl(213, 17%, 20%)",
            "darkGrey": "hsl(206,16%,60%)",
            "failure": Object {
              "dark": "#e74432",
              "darker": "#e42f1b",
              "default": "hsl(6, 79%, 65%)",
            },
            "googleBrandRed": "hsl(5, 81%, 56%)",
            "lightGrey": "hsl(207,22%,90%)",
            "mediumGrey": "hsl(206,23%,69%)",
            "mysticGrey": "hsl(216,45%,98%)",
            "paleGrey": "hsl(240, 33%, 99%)",
            "primary": Object {
              "dark": "#1873a0",
              "darker": "#14638a",
              "default": "hsl(200, 74%, 46%)",
            },
            "secondary": Object {
              "default": "hsl(0, 100%, 100%)",
            },
            "spaceGrey": "hsl(207,13%,45%)",
            "success": Object {
              "dark": "#6da333",
              "darker": "#60902d",
              "default": "hsl(89, 53%, 52%)",
            },
            "veryLightBlue": "hsl(220, 27%, 94%)",
            "warning": Object {
              "dark": "#f59a24",
              "darker": "#f48f0b",
              "default": "hsl(34, 91%, 65%)",
            },
            "white": "hsl(0, 100%, 100%)",
            "whiteOpacity": [Function],
          },
        }
      }
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        icon={null}
        onClick={[Function]}
        size="default"
        type="button"
      >
        Text
      </button>
    </styled.button>
  </Button>
</Styled(Button)>
`;

exports[`<Button /> should render a left icon 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  width: auto;
  padding: 0.8rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.4rem;
  color: hsl(0,100%,100%);
  cursor: pointer;
  outline: none;
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  color: hsl(213,17%,20%);
  background: none;
  padding: 0.8rem 1.6rem;
}

.c0 svg > path {
  fill: hsl(0,100%,100%);
}

.c0 svg > path {
  fill: hsl(213,17%,20%);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  margin-right: 1rem;
  margin-left: 0;
}

.c2 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 20;
  line-height: 20;
}

<Styled(Button)
  icon={
    <Styled(Icon)
      color="hsl(0, 100%, 100%)"
      name="calendar"
    />
  }
  iconPosition="left"
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "1.6rem",
          "bigInt": 1.6,
          "default": "1.2rem",
          "defaultInt": 1.2,
          "h1": "3.6rem",
          "h1Int": 3.6,
          "h2": "3rem",
          "h2Int": 3,
          "h3": "2.6rem",
          "h3Int": 2.6,
          "h4": "2.2rem",
          "h4Int": 2.2,
          "h5": "2.0rem",
          "h5Int": 2,
          "h6": "1.8rem",
          "h6Int": 1.8,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.4rem",
          "mediumInt": 1.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "avatar": Object {
          "alizarin": "hsl(6, 78%, 57%)",
          "carrot": "hsl(28, 80%, 52%)",
          "emerald": "hsl(145, 63%, 49%)",
          "river": "hsl(204, 70%, 53%)",
          "turquoise": "hsl(168, 76%, 42%)",
          "wisteria": "hsl(282, 44%, 47%)",
        },
        "black": "hsl(0, 0%, 0%)",
        "bodyBackground": "hsl(240, 33%, 99%)",
        "darkBlue": "hsl(213, 17%, 20%)",
        "darkGrey": "hsl(206,16%,60%)",
        "failure": Object {
          "dark": "#e74432",
          "darker": "#e42f1b",
          "default": "hsl(6, 79%, 65%)",
        },
        "googleBrandRed": "hsl(5, 81%, 56%)",
        "lightGrey": "hsl(207,22%,90%)",
        "mediumGrey": "hsl(206,23%,69%)",
        "mysticGrey": "hsl(216,45%,98%)",
        "paleGrey": "hsl(240, 33%, 99%)",
        "primary": Object {
          "dark": "#1873a0",
          "darker": "#14638a",
          "default": "hsl(200, 74%, 46%)",
        },
        "secondary": Object {
          "default": "hsl(0, 100%, 100%)",
        },
        "spaceGrey": "hsl(207,13%,45%)",
        "success": Object {
          "dark": "#6da333",
          "darker": "#60902d",
          "default": "hsl(89, 53%, 52%)",
        },
        "veryLightBlue": "hsl(220, 27%, 94%)",
        "warning": Object {
          "dark": "#f59a24",
          "darker": "#f48f0b",
          "default": "hsl(34, 91%, 65%)",
        },
        "white": "hsl(0, 100%, 100%)",
        "whiteOpacity": [Function],
      },
    }
  }
>
  <Button
    appearance="default"
    className=""
    disabled={false}
    fluid={false}
    icon={
      <Styled(Icon)
        color="hsl(0, 100%, 100%)"
        name="calendar"
      />
    }
    iconPosition="left"
    onClick={[Function]}
    size="default"
    theme={
      Object {
        "breakpoints": Object {
          "lg": 992,
          "md": 768,
          "sm": 576,
          "xl": 1200,
          "xs": 0,
        },
        "dimensions": Object {
          "big": "3.1rem",
          "bigInt": 3.1,
          "huge": "4.5rem",
          "hugeInt": 4.5,
          "medium": "1.5rem",
          "mediumInt": 1.5,
          "radius": "0.4rem",
          "radiusInt": 0.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "fonts": Object {
          "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
          "size": Object {
            "big": "1.6rem",
            "bigInt": 1.6,
            "default": "1.2rem",
            "defaultInt": 1.2,
            "h1": "3.6rem",
            "h1Int": 3.6,
            "h2": "3rem",
            "h2Int": 3,
            "h3": "2.6rem",
            "h3Int": 2.6,
            "h4": "2.2rem",
            "h4Int": 2.2,
            "h5": "2.0rem",
            "h5Int": 2,
            "h6": "1.8rem",
            "h6Int": 1.8,
            "huge": "6.4rem",
            "hugeInt": 6.4,
            "medium": "1.4rem",
            "mediumInt": 1.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "spacing": Object {
            "big": "1.5px",
            "medium": "1px",
            "small": "0.5px",
          },
          "weight": Object {
            "normal": 400,
            "thick": 600,
            "thin": 200,
          },
        },
        "palette": Object {
          "avatar": Object {
            "alizarin": "hsl(6, 78%, 57%)",
            "carrot": "hsl(28, 80%, 52%)",
            "emerald": "hsl(145, 63%, 49%)",
            "river": "hsl(204, 70%, 53%)",
            "turquoise": "hsl(168, 76%, 42%)",
            "wisteria": "hsl(282, 44%, 47%)",
          },
          "black": "hsl(0, 0%, 0%)",
          "bodyBackground": "hsl(240, 33%, 99%)",
          "darkBlue": "hsl(213, 17%, 20%)",
          "darkGrey": "hsl(206,16%,60%)",
          "failure": Object {
            "dark": "#e74432",
            "darker": "#e42f1b",
            "default": "hsl(6, 79%, 65%)",
          },
          "googleBrandRed": "hsl(5, 81%, 56%)",
          "lightGrey": "hsl(207,22%,90%)",
          "mediumGrey": "hsl(206,23%,69%)",
          "mysticGrey": "hsl(216,45%,98%)",
          "paleGrey": "hsl(240, 33%, 99%)",
          "primary": Object {
            "dark": "#1873a0",
            "darker": "#14638a",
            "default": "hsl(200, 74%, 46%)",
          },
          "secondary": Object {
            "default": "hsl(0, 100%, 100%)",
          },
          "spaceGrey": "hsl(207,13%,45%)",
          "success": Object {
            "dark": "#6da333",
            "darker": "#60902d",
            "default": "hsl(89, 53%, 52%)",
          },
          "veryLightBlue": "hsl(220, 27%, 94%)",
          "warning": Object {
            "dark": "#f59a24",
            "darker": "#f48f0b",
            "default": "hsl(34, 91%, 65%)",
          },
          "white": "hsl(0, 100%, 100%)",
          "whiteOpacity": [Function],
        },
      }
    }
    type="button"
  >
    <styled.button
      appearance="default"
      className=""
      disabled={false}
      fluid={false}
      icon={
        <Styled(Icon)
          color="hsl(0, 100%, 100%)"
          name="calendar"
        />
      }
      iconPosition="left"
      onClick={[Function]}
      size="default"
      theme={
        Object {
          "breakpoints": Object {
            "lg": 992,
            "md": 768,
            "sm": 576,
            "xl": 1200,
            "xs": 0,
          },
          "dimensions": Object {
            "big": "3.1rem",
            "bigInt": 3.1,
            "huge": "4.5rem",
            "hugeInt": 4.5,
            "medium": "1.5rem",
            "mediumInt": 1.5,
            "radius": "0.4rem",
            "radiusInt": 0.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "fonts": Object {
            "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
            "size": Object {
              "big": "1.6rem",
              "bigInt": 1.6,
              "default": "1.2rem",
              "defaultInt": 1.2,
              "h1": "3.6rem",
              "h1Int": 3.6,
              "h2": "3rem",
              "h2Int": 3,
              "h3": "2.6rem",
              "h3Int": 2.6,
              "h4": "2.2rem",
              "h4Int": 2.2,
              "h5": "2.0rem",
              "h5Int": 2,
              "h6": "1.8rem",
              "h6Int": 1.8,
              "huge": "6.4rem",
              "hugeInt": 6.4,
              "medium": "1.4rem",
              "mediumInt": 1.4,
              "small": "0.7rem",
              "smallInt": 0.7,
              "tiny": "0.3rem",
              "tinyInt": 0.3,
            },
            "spacing": Object {
              "big": "1.5px",
              "medium": "1px",
              "small": "0.5px",
            },
            "weight": Object {
              "normal": 400,
              "thick": 600,
              "thin": 200,
            },
          },
          "palette": Object {
            "avatar": Object {
              "alizarin": "hsl(6, 78%, 57%)",
              "carrot": "hsl(28, 80%, 52%)",
              "emerald": "hsl(145, 63%, 49%)",
              "river": "hsl(204, 70%, 53%)",
              "turquoise": "hsl(168, 76%, 42%)",
              "wisteria": "hsl(282, 44%, 47%)",
            },
            "black": "hsl(0, 0%, 0%)",
            "bodyBackground": "hsl(240, 33%, 99%)",
            "darkBlue": "hsl(213, 17%, 20%)",
            "darkGrey": "hsl(206,16%,60%)",
            "failure": Object {
              "dark": "#e74432",
              "darker": "#e42f1b",
              "default": "hsl(6, 79%, 65%)",
            },
            "googleBrandRed": "hsl(5, 81%, 56%)",
            "lightGrey": "hsl(207,22%,90%)",
            "mediumGrey": "hsl(206,23%,69%)",
            "mysticGrey": "hsl(216,45%,98%)",
            "paleGrey": "hsl(240, 33%, 99%)",
            "primary": Object {
              "dark": "#1873a0",
              "darker": "#14638a",
              "default": "hsl(200, 74%, 46%)",
            },
            "secondary": Object {
              "default": "hsl(0, 100%, 100%)",
            },
            "spaceGrey": "hsl(207,13%,45%)",
            "success": Object {
              "dark": "#6da333",
              "darker": "#60902d",
              "default": "hsl(89, 53%, 52%)",
            },
            "veryLightBlue": "hsl(220, 27%, 94%)",
            "warning": Object {
              "dark": "#f59a24",
              "darker": "#f48f0b",
              "default": "hsl(34, 91%, 65%)",
            },
            "white": "hsl(0, 100%, 100%)",
            "whiteOpacity": [Function],
          },
        }
      }
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        icon={
          <Styled(Icon)
            color="hsl(0, 100%, 100%)"
            name="calendar"
          />
        }
        onClick={[Function]}
        size="default"
        type="button"
      >
        <styled.span
          left={true}
        >
          <span
            className="c1"
          >
            <Styled(Icon)
              color="hsl(0, 100%, 100%)"
              name="calendar"
            >
              <Icon
                className=""
                color="hsl(0, 100%, 100%)"
                height="20"
                name="calendar"
                spin={false}
                width="20"
              >
                <styled.div
                  className=""
                  data-testid="iconContainer"
                  height="20"
                  spin={false}
                  width="20"
                >
                  <div
                    className="c2"
                    data-testid="iconContainer"
                    height="20"
                    width="20"
                  >
                    <svg
                      data-testid="iconSvg"
                      height="20"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M426.667 192v-64c0-11.782-9.552-21.333-21.334-21.333h-42.666V128c0 11.782-9.552 21.333-21.334 21.333S320 139.783 320 128v-21.333H192V128c0 11.782-9.551 21.333-21.333 21.333-11.782 0-21.334-9.55-21.334-21.333v-21.333h-42.666c-11.782 0-21.334 9.55-21.334 21.333v64h341.334zm0 42.667H85.333v192c0 11.782 9.552 21.333 21.334 21.333h298.666c11.782 0 21.334-9.551 21.334-21.333v-192zM192 64h128V42.667c0-11.782 9.551-21.334 21.333-21.334 11.782 0 21.334 9.552 21.334 21.334V64h42.666c35.347 0 64 28.654 64 64v298.667c0 35.346-28.653 64-64 64H106.667c-35.347 0-64-28.654-64-64V128c0-35.346 28.653-64 64-64h42.666V42.667c0-11.782 9.552-21.334 21.334-21.334S192 30.885 192 42.667V64z"
                        data-testid="iconSvgPath"
                        fill="hsl(0, 100%, 100%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </span>
        </styled.span>
        Text
      </button>
    </styled.button>
  </Button>
</Styled(Button)>
`;

exports[`<Button /> should render a right icon 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  width: auto;
  padding: 0.8rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.4rem;
  color: hsl(0,100%,100%);
  cursor: pointer;
  outline: none;
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  color: hsl(213,17%,20%);
  background: none;
  padding: 0.8rem 1.6rem;
}

.c0 svg > path {
  fill: hsl(0,100%,100%);
}

.c0 svg > path {
  fill: hsl(213,17%,20%);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-right: 0;
  margin-left: 1rem;
}

.c2 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 20;
  line-height: 20;
}

<Styled(Button)
  icon={
    <Styled(Icon)
      color="hsl(0, 100%, 100%)"
      name="calendar"
    />
  }
  iconPosition="right"
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "1.6rem",
          "bigInt": 1.6,
          "default": "1.2rem",
          "defaultInt": 1.2,
          "h1": "3.6rem",
          "h1Int": 3.6,
          "h2": "3rem",
          "h2Int": 3,
          "h3": "2.6rem",
          "h3Int": 2.6,
          "h4": "2.2rem",
          "h4Int": 2.2,
          "h5": "2.0rem",
          "h5Int": 2,
          "h6": "1.8rem",
          "h6Int": 1.8,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.4rem",
          "mediumInt": 1.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "avatar": Object {
          "alizarin": "hsl(6, 78%, 57%)",
          "carrot": "hsl(28, 80%, 52%)",
          "emerald": "hsl(145, 63%, 49%)",
          "river": "hsl(204, 70%, 53%)",
          "turquoise": "hsl(168, 76%, 42%)",
          "wisteria": "hsl(282, 44%, 47%)",
        },
        "black": "hsl(0, 0%, 0%)",
        "bodyBackground": "hsl(240, 33%, 99%)",
        "darkBlue": "hsl(213, 17%, 20%)",
        "darkGrey": "hsl(206,16%,60%)",
        "failure": Object {
          "dark": "#e74432",
          "darker": "#e42f1b",
          "default": "hsl(6, 79%, 65%)",
        },
        "googleBrandRed": "hsl(5, 81%, 56%)",
        "lightGrey": "hsl(207,22%,90%)",
        "mediumGrey": "hsl(206,23%,69%)",
        "mysticGrey": "hsl(216,45%,98%)",
        "paleGrey": "hsl(240, 33%, 99%)",
        "primary": Object {
          "dark": "#1873a0",
          "darker": "#14638a",
          "default": "hsl(200, 74%, 46%)",
        },
        "secondary": Object {
          "default": "hsl(0, 100%, 100%)",
        },
        "spaceGrey": "hsl(207,13%,45%)",
        "success": Object {
          "dark": "#6da333",
          "darker": "#60902d",
          "default": "hsl(89, 53%, 52%)",
        },
        "veryLightBlue": "hsl(220, 27%, 94%)",
        "warning": Object {
          "dark": "#f59a24",
          "darker": "#f48f0b",
          "default": "hsl(34, 91%, 65%)",
        },
        "white": "hsl(0, 100%, 100%)",
        "whiteOpacity": [Function],
      },
    }
  }
>
  <Button
    appearance="default"
    className=""
    disabled={false}
    fluid={false}
    icon={
      <Styled(Icon)
        color="hsl(0, 100%, 100%)"
        name="calendar"
      />
    }
    iconPosition="right"
    onClick={[Function]}
    size="default"
    theme={
      Object {
        "breakpoints": Object {
          "lg": 992,
          "md": 768,
          "sm": 576,
          "xl": 1200,
          "xs": 0,
        },
        "dimensions": Object {
          "big": "3.1rem",
          "bigInt": 3.1,
          "huge": "4.5rem",
          "hugeInt": 4.5,
          "medium": "1.5rem",
          "mediumInt": 1.5,
          "radius": "0.4rem",
          "radiusInt": 0.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "fonts": Object {
          "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
          "size": Object {
            "big": "1.6rem",
            "bigInt": 1.6,
            "default": "1.2rem",
            "defaultInt": 1.2,
            "h1": "3.6rem",
            "h1Int": 3.6,
            "h2": "3rem",
            "h2Int": 3,
            "h3": "2.6rem",
            "h3Int": 2.6,
            "h4": "2.2rem",
            "h4Int": 2.2,
            "h5": "2.0rem",
            "h5Int": 2,
            "h6": "1.8rem",
            "h6Int": 1.8,
            "huge": "6.4rem",
            "hugeInt": 6.4,
            "medium": "1.4rem",
            "mediumInt": 1.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "spacing": Object {
            "big": "1.5px",
            "medium": "1px",
            "small": "0.5px",
          },
          "weight": Object {
            "normal": 400,
            "thick": 600,
            "thin": 200,
          },
        },
        "palette": Object {
          "avatar": Object {
            "alizarin": "hsl(6, 78%, 57%)",
            "carrot": "hsl(28, 80%, 52%)",
            "emerald": "hsl(145, 63%, 49%)",
            "river": "hsl(204, 70%, 53%)",
            "turquoise": "hsl(168, 76%, 42%)",
            "wisteria": "hsl(282, 44%, 47%)",
          },
          "black": "hsl(0, 0%, 0%)",
          "bodyBackground": "hsl(240, 33%, 99%)",
          "darkBlue": "hsl(213, 17%, 20%)",
          "darkGrey": "hsl(206,16%,60%)",
          "failure": Object {
            "dark": "#e74432",
            "darker": "#e42f1b",
            "default": "hsl(6, 79%, 65%)",
          },
          "googleBrandRed": "hsl(5, 81%, 56%)",
          "lightGrey": "hsl(207,22%,90%)",
          "mediumGrey": "hsl(206,23%,69%)",
          "mysticGrey": "hsl(216,45%,98%)",
          "paleGrey": "hsl(240, 33%, 99%)",
          "primary": Object {
            "dark": "#1873a0",
            "darker": "#14638a",
            "default": "hsl(200, 74%, 46%)",
          },
          "secondary": Object {
            "default": "hsl(0, 100%, 100%)",
          },
          "spaceGrey": "hsl(207,13%,45%)",
          "success": Object {
            "dark": "#6da333",
            "darker": "#60902d",
            "default": "hsl(89, 53%, 52%)",
          },
          "veryLightBlue": "hsl(220, 27%, 94%)",
          "warning": Object {
            "dark": "#f59a24",
            "darker": "#f48f0b",
            "default": "hsl(34, 91%, 65%)",
          },
          "white": "hsl(0, 100%, 100%)",
          "whiteOpacity": [Function],
        },
      }
    }
    type="button"
  >
    <styled.button
      appearance="default"
      className=""
      disabled={false}
      fluid={false}
      icon={
        <Styled(Icon)
          color="hsl(0, 100%, 100%)"
          name="calendar"
        />
      }
      iconPosition="right"
      onClick={[Function]}
      size="default"
      theme={
        Object {
          "breakpoints": Object {
            "lg": 992,
            "md": 768,
            "sm": 576,
            "xl": 1200,
            "xs": 0,
          },
          "dimensions": Object {
            "big": "3.1rem",
            "bigInt": 3.1,
            "huge": "4.5rem",
            "hugeInt": 4.5,
            "medium": "1.5rem",
            "mediumInt": 1.5,
            "radius": "0.4rem",
            "radiusInt": 0.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "fonts": Object {
            "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
            "size": Object {
              "big": "1.6rem",
              "bigInt": 1.6,
              "default": "1.2rem",
              "defaultInt": 1.2,
              "h1": "3.6rem",
              "h1Int": 3.6,
              "h2": "3rem",
              "h2Int": 3,
              "h3": "2.6rem",
              "h3Int": 2.6,
              "h4": "2.2rem",
              "h4Int": 2.2,
              "h5": "2.0rem",
              "h5Int": 2,
              "h6": "1.8rem",
              "h6Int": 1.8,
              "huge": "6.4rem",
              "hugeInt": 6.4,
              "medium": "1.4rem",
              "mediumInt": 1.4,
              "small": "0.7rem",
              "smallInt": 0.7,
              "tiny": "0.3rem",
              "tinyInt": 0.3,
            },
            "spacing": Object {
              "big": "1.5px",
              "medium": "1px",
              "small": "0.5px",
            },
            "weight": Object {
              "normal": 400,
              "thick": 600,
              "thin": 200,
            },
          },
          "palette": Object {
            "avatar": Object {
              "alizarin": "hsl(6, 78%, 57%)",
              "carrot": "hsl(28, 80%, 52%)",
              "emerald": "hsl(145, 63%, 49%)",
              "river": "hsl(204, 70%, 53%)",
              "turquoise": "hsl(168, 76%, 42%)",
              "wisteria": "hsl(282, 44%, 47%)",
            },
            "black": "hsl(0, 0%, 0%)",
            "bodyBackground": "hsl(240, 33%, 99%)",
            "darkBlue": "hsl(213, 17%, 20%)",
            "darkGrey": "hsl(206,16%,60%)",
            "failure": Object {
              "dark": "#e74432",
              "darker": "#e42f1b",
              "default": "hsl(6, 79%, 65%)",
            },
            "googleBrandRed": "hsl(5, 81%, 56%)",
            "lightGrey": "hsl(207,22%,90%)",
            "mediumGrey": "hsl(206,23%,69%)",
            "mysticGrey": "hsl(216,45%,98%)",
            "paleGrey": "hsl(240, 33%, 99%)",
            "primary": Object {
              "dark": "#1873a0",
              "darker": "#14638a",
              "default": "hsl(200, 74%, 46%)",
            },
            "secondary": Object {
              "default": "hsl(0, 100%, 100%)",
            },
            "spaceGrey": "hsl(207,13%,45%)",
            "success": Object {
              "dark": "#6da333",
              "darker": "#60902d",
              "default": "hsl(89, 53%, 52%)",
            },
            "veryLightBlue": "hsl(220, 27%, 94%)",
            "warning": Object {
              "dark": "#f59a24",
              "darker": "#f48f0b",
              "default": "hsl(34, 91%, 65%)",
            },
            "white": "hsl(0, 100%, 100%)",
            "whiteOpacity": [Function],
          },
        }
      }
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        icon={
          <Styled(Icon)
            color="hsl(0, 100%, 100%)"
            name="calendar"
          />
        }
        onClick={[Function]}
        size="default"
        type="button"
      >
        <styled.span
          right={true}
        >
          <span
            className="c1"
          >
            <Styled(Icon)
              color="hsl(0, 100%, 100%)"
              name="calendar"
            >
              <Icon
                className=""
                color="hsl(0, 100%, 100%)"
                height="20"
                name="calendar"
                spin={false}
                width="20"
              >
                <styled.div
                  className=""
                  data-testid="iconContainer"
                  height="20"
                  spin={false}
                  width="20"
                >
                  <div
                    className="c2"
                    data-testid="iconContainer"
                    height="20"
                    width="20"
                  >
                    <svg
                      data-testid="iconSvg"
                      height="20"
                      style={
                        Object {
                          "display": "block",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M426.667 192v-64c0-11.782-9.552-21.333-21.334-21.333h-42.666V128c0 11.782-9.552 21.333-21.334 21.333S320 139.783 320 128v-21.333H192V128c0 11.782-9.551 21.333-21.333 21.333-11.782 0-21.334-9.55-21.334-21.333v-21.333h-42.666c-11.782 0-21.334 9.55-21.334 21.333v64h341.334zm0 42.667H85.333v192c0 11.782 9.552 21.333 21.334 21.333h298.666c11.782 0 21.334-9.551 21.334-21.333v-192zM192 64h128V42.667c0-11.782 9.551-21.334 21.333-21.334 11.782 0 21.334 9.552 21.334 21.334V64h42.666c35.347 0 64 28.654 64 64v298.667c0 35.346-28.653 64-64 64H106.667c-35.347 0-64-28.654-64-64V128c0-35.346 28.653-64 64-64h42.666V42.667c0-11.782 9.552-21.334 21.334-21.334S192 30.885 192 42.667V64z"
                        data-testid="iconSvgPath"
                        fill="hsl(0, 100%, 100%)"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </styled.div>
              </Icon>
            </Styled(Icon)>
          </span>
        </styled.span>
        Text
      </button>
    </styled.button>
  </Button>
</Styled(Button)>
`;

exports[`<Button /> should render with a different size 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  width: auto;
  padding: 0.8rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.4rem;
  color: hsl(0,100%,100%);
  cursor: pointer;
  outline: none;
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  color: hsl(213,17%,20%);
  background: none;
  padding: 0.8rem 1.8rem;
  font-size: 1.6rem;
  line-height: 1.6rem;
}

.c0 svg > path {
  fill: hsl(0,100%,100%);
}

.c0 svg > path {
  fill: hsl(213,17%,20%);
}

<Styled(Button)
  size="large"
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "1.6rem",
          "bigInt": 1.6,
          "default": "1.2rem",
          "defaultInt": 1.2,
          "h1": "3.6rem",
          "h1Int": 3.6,
          "h2": "3rem",
          "h2Int": 3,
          "h3": "2.6rem",
          "h3Int": 2.6,
          "h4": "2.2rem",
          "h4Int": 2.2,
          "h5": "2.0rem",
          "h5Int": 2,
          "h6": "1.8rem",
          "h6Int": 1.8,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.4rem",
          "mediumInt": 1.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "avatar": Object {
          "alizarin": "hsl(6, 78%, 57%)",
          "carrot": "hsl(28, 80%, 52%)",
          "emerald": "hsl(145, 63%, 49%)",
          "river": "hsl(204, 70%, 53%)",
          "turquoise": "hsl(168, 76%, 42%)",
          "wisteria": "hsl(282, 44%, 47%)",
        },
        "black": "hsl(0, 0%, 0%)",
        "bodyBackground": "hsl(240, 33%, 99%)",
        "darkBlue": "hsl(213, 17%, 20%)",
        "darkGrey": "hsl(206,16%,60%)",
        "failure": Object {
          "dark": "#e74432",
          "darker": "#e42f1b",
          "default": "hsl(6, 79%, 65%)",
        },
        "googleBrandRed": "hsl(5, 81%, 56%)",
        "lightGrey": "hsl(207,22%,90%)",
        "mediumGrey": "hsl(206,23%,69%)",
        "mysticGrey": "hsl(216,45%,98%)",
        "paleGrey": "hsl(240, 33%, 99%)",
        "primary": Object {
          "dark": "#1873a0",
          "darker": "#14638a",
          "default": "hsl(200, 74%, 46%)",
        },
        "secondary": Object {
          "default": "hsl(0, 100%, 100%)",
        },
        "spaceGrey": "hsl(207,13%,45%)",
        "success": Object {
          "dark": "#6da333",
          "darker": "#60902d",
          "default": "hsl(89, 53%, 52%)",
        },
        "veryLightBlue": "hsl(220, 27%, 94%)",
        "warning": Object {
          "dark": "#f59a24",
          "darker": "#f48f0b",
          "default": "hsl(34, 91%, 65%)",
        },
        "white": "hsl(0, 100%, 100%)",
        "whiteOpacity": [Function],
      },
    }
  }
>
  <Button
    appearance="default"
    className=""
    disabled={false}
    fluid={false}
    icon={null}
    iconPosition="left"
    onClick={[Function]}
    size="large"
    theme={
      Object {
        "breakpoints": Object {
          "lg": 992,
          "md": 768,
          "sm": 576,
          "xl": 1200,
          "xs": 0,
        },
        "dimensions": Object {
          "big": "3.1rem",
          "bigInt": 3.1,
          "huge": "4.5rem",
          "hugeInt": 4.5,
          "medium": "1.5rem",
          "mediumInt": 1.5,
          "radius": "0.4rem",
          "radiusInt": 0.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "fonts": Object {
          "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
          "size": Object {
            "big": "1.6rem",
            "bigInt": 1.6,
            "default": "1.2rem",
            "defaultInt": 1.2,
            "h1": "3.6rem",
            "h1Int": 3.6,
            "h2": "3rem",
            "h2Int": 3,
            "h3": "2.6rem",
            "h3Int": 2.6,
            "h4": "2.2rem",
            "h4Int": 2.2,
            "h5": "2.0rem",
            "h5Int": 2,
            "h6": "1.8rem",
            "h6Int": 1.8,
            "huge": "6.4rem",
            "hugeInt": 6.4,
            "medium": "1.4rem",
            "mediumInt": 1.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "spacing": Object {
            "big": "1.5px",
            "medium": "1px",
            "small": "0.5px",
          },
          "weight": Object {
            "normal": 400,
            "thick": 600,
            "thin": 200,
          },
        },
        "palette": Object {
          "avatar": Object {
            "alizarin": "hsl(6, 78%, 57%)",
            "carrot": "hsl(28, 80%, 52%)",
            "emerald": "hsl(145, 63%, 49%)",
            "river": "hsl(204, 70%, 53%)",
            "turquoise": "hsl(168, 76%, 42%)",
            "wisteria": "hsl(282, 44%, 47%)",
          },
          "black": "hsl(0, 0%, 0%)",
          "bodyBackground": "hsl(240, 33%, 99%)",
          "darkBlue": "hsl(213, 17%, 20%)",
          "darkGrey": "hsl(206,16%,60%)",
          "failure": Object {
            "dark": "#e74432",
            "darker": "#e42f1b",
            "default": "hsl(6, 79%, 65%)",
          },
          "googleBrandRed": "hsl(5, 81%, 56%)",
          "lightGrey": "hsl(207,22%,90%)",
          "mediumGrey": "hsl(206,23%,69%)",
          "mysticGrey": "hsl(216,45%,98%)",
          "paleGrey": "hsl(240, 33%, 99%)",
          "primary": Object {
            "dark": "#1873a0",
            "darker": "#14638a",
            "default": "hsl(200, 74%, 46%)",
          },
          "secondary": Object {
            "default": "hsl(0, 100%, 100%)",
          },
          "spaceGrey": "hsl(207,13%,45%)",
          "success": Object {
            "dark": "#6da333",
            "darker": "#60902d",
            "default": "hsl(89, 53%, 52%)",
          },
          "veryLightBlue": "hsl(220, 27%, 94%)",
          "warning": Object {
            "dark": "#f59a24",
            "darker": "#f48f0b",
            "default": "hsl(34, 91%, 65%)",
          },
          "white": "hsl(0, 100%, 100%)",
          "whiteOpacity": [Function],
        },
      }
    }
    type="button"
  >
    <styled.button
      appearance="default"
      className=""
      disabled={false}
      fluid={false}
      icon={null}
      iconPosition="left"
      onClick={[Function]}
      size="large"
      theme={
        Object {
          "breakpoints": Object {
            "lg": 992,
            "md": 768,
            "sm": 576,
            "xl": 1200,
            "xs": 0,
          },
          "dimensions": Object {
            "big": "3.1rem",
            "bigInt": 3.1,
            "huge": "4.5rem",
            "hugeInt": 4.5,
            "medium": "1.5rem",
            "mediumInt": 1.5,
            "radius": "0.4rem",
            "radiusInt": 0.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "fonts": Object {
            "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
            "size": Object {
              "big": "1.6rem",
              "bigInt": 1.6,
              "default": "1.2rem",
              "defaultInt": 1.2,
              "h1": "3.6rem",
              "h1Int": 3.6,
              "h2": "3rem",
              "h2Int": 3,
              "h3": "2.6rem",
              "h3Int": 2.6,
              "h4": "2.2rem",
              "h4Int": 2.2,
              "h5": "2.0rem",
              "h5Int": 2,
              "h6": "1.8rem",
              "h6Int": 1.8,
              "huge": "6.4rem",
              "hugeInt": 6.4,
              "medium": "1.4rem",
              "mediumInt": 1.4,
              "small": "0.7rem",
              "smallInt": 0.7,
              "tiny": "0.3rem",
              "tinyInt": 0.3,
            },
            "spacing": Object {
              "big": "1.5px",
              "medium": "1px",
              "small": "0.5px",
            },
            "weight": Object {
              "normal": 400,
              "thick": 600,
              "thin": 200,
            },
          },
          "palette": Object {
            "avatar": Object {
              "alizarin": "hsl(6, 78%, 57%)",
              "carrot": "hsl(28, 80%, 52%)",
              "emerald": "hsl(145, 63%, 49%)",
              "river": "hsl(204, 70%, 53%)",
              "turquoise": "hsl(168, 76%, 42%)",
              "wisteria": "hsl(282, 44%, 47%)",
            },
            "black": "hsl(0, 0%, 0%)",
            "bodyBackground": "hsl(240, 33%, 99%)",
            "darkBlue": "hsl(213, 17%, 20%)",
            "darkGrey": "hsl(206,16%,60%)",
            "failure": Object {
              "dark": "#e74432",
              "darker": "#e42f1b",
              "default": "hsl(6, 79%, 65%)",
            },
            "googleBrandRed": "hsl(5, 81%, 56%)",
            "lightGrey": "hsl(207,22%,90%)",
            "mediumGrey": "hsl(206,23%,69%)",
            "mysticGrey": "hsl(216,45%,98%)",
            "paleGrey": "hsl(240, 33%, 99%)",
            "primary": Object {
              "dark": "#1873a0",
              "darker": "#14638a",
              "default": "hsl(200, 74%, 46%)",
            },
            "secondary": Object {
              "default": "hsl(0, 100%, 100%)",
            },
            "spaceGrey": "hsl(207,13%,45%)",
            "success": Object {
              "dark": "#6da333",
              "darker": "#60902d",
              "default": "hsl(89, 53%, 52%)",
            },
            "veryLightBlue": "hsl(220, 27%, 94%)",
            "warning": Object {
              "dark": "#f59a24",
              "darker": "#f48f0b",
              "default": "hsl(34, 91%, 65%)",
            },
            "white": "hsl(0, 100%, 100%)",
            "whiteOpacity": [Function],
          },
        }
      }
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        icon={null}
        onClick={[Function]}
        size="large"
        type="button"
      >
        Text
      </button>
    </styled.button>
  </Button>
</Styled(Button)>
`;

exports[`<Button /> should render with a type submit 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  width: auto;
  padding: 0.8rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.4rem;
  color: hsl(0,100%,100%);
  cursor: pointer;
  outline: none;
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  color: hsl(213,17%,20%);
  background: none;
  padding: 0.8rem 1.6rem;
}

.c0 svg > path {
  fill: hsl(0,100%,100%);
}

.c0 svg > path {
  fill: hsl(213,17%,20%);
}

<Styled(Button)
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "1.6rem",
          "bigInt": 1.6,
          "default": "1.2rem",
          "defaultInt": 1.2,
          "h1": "3.6rem",
          "h1Int": 3.6,
          "h2": "3rem",
          "h2Int": 3,
          "h3": "2.6rem",
          "h3Int": 2.6,
          "h4": "2.2rem",
          "h4Int": 2.2,
          "h5": "2.0rem",
          "h5Int": 2,
          "h6": "1.8rem",
          "h6Int": 1.8,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.4rem",
          "mediumInt": 1.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "avatar": Object {
          "alizarin": "hsl(6, 78%, 57%)",
          "carrot": "hsl(28, 80%, 52%)",
          "emerald": "hsl(145, 63%, 49%)",
          "river": "hsl(204, 70%, 53%)",
          "turquoise": "hsl(168, 76%, 42%)",
          "wisteria": "hsl(282, 44%, 47%)",
        },
        "black": "hsl(0, 0%, 0%)",
        "bodyBackground": "hsl(240, 33%, 99%)",
        "darkBlue": "hsl(213, 17%, 20%)",
        "darkGrey": "hsl(206,16%,60%)",
        "failure": Object {
          "dark": "#e74432",
          "darker": "#e42f1b",
          "default": "hsl(6, 79%, 65%)",
        },
        "googleBrandRed": "hsl(5, 81%, 56%)",
        "lightGrey": "hsl(207,22%,90%)",
        "mediumGrey": "hsl(206,23%,69%)",
        "mysticGrey": "hsl(216,45%,98%)",
        "paleGrey": "hsl(240, 33%, 99%)",
        "primary": Object {
          "dark": "#1873a0",
          "darker": "#14638a",
          "default": "hsl(200, 74%, 46%)",
        },
        "secondary": Object {
          "default": "hsl(0, 100%, 100%)",
        },
        "spaceGrey": "hsl(207,13%,45%)",
        "success": Object {
          "dark": "#6da333",
          "darker": "#60902d",
          "default": "hsl(89, 53%, 52%)",
        },
        "veryLightBlue": "hsl(220, 27%, 94%)",
        "warning": Object {
          "dark": "#f59a24",
          "darker": "#f48f0b",
          "default": "hsl(34, 91%, 65%)",
        },
        "white": "hsl(0, 100%, 100%)",
        "whiteOpacity": [Function],
      },
    }
  }
  type="submit"
>
  <Button
    appearance="default"
    className=""
    disabled={false}
    fluid={false}
    icon={null}
    iconPosition="left"
    onClick={[Function]}
    size="default"
    theme={
      Object {
        "breakpoints": Object {
          "lg": 992,
          "md": 768,
          "sm": 576,
          "xl": 1200,
          "xs": 0,
        },
        "dimensions": Object {
          "big": "3.1rem",
          "bigInt": 3.1,
          "huge": "4.5rem",
          "hugeInt": 4.5,
          "medium": "1.5rem",
          "mediumInt": 1.5,
          "radius": "0.4rem",
          "radiusInt": 0.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "fonts": Object {
          "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
          "size": Object {
            "big": "1.6rem",
            "bigInt": 1.6,
            "default": "1.2rem",
            "defaultInt": 1.2,
            "h1": "3.6rem",
            "h1Int": 3.6,
            "h2": "3rem",
            "h2Int": 3,
            "h3": "2.6rem",
            "h3Int": 2.6,
            "h4": "2.2rem",
            "h4Int": 2.2,
            "h5": "2.0rem",
            "h5Int": 2,
            "h6": "1.8rem",
            "h6Int": 1.8,
            "huge": "6.4rem",
            "hugeInt": 6.4,
            "medium": "1.4rem",
            "mediumInt": 1.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "spacing": Object {
            "big": "1.5px",
            "medium": "1px",
            "small": "0.5px",
          },
          "weight": Object {
            "normal": 400,
            "thick": 600,
            "thin": 200,
          },
        },
        "palette": Object {
          "avatar": Object {
            "alizarin": "hsl(6, 78%, 57%)",
            "carrot": "hsl(28, 80%, 52%)",
            "emerald": "hsl(145, 63%, 49%)",
            "river": "hsl(204, 70%, 53%)",
            "turquoise": "hsl(168, 76%, 42%)",
            "wisteria": "hsl(282, 44%, 47%)",
          },
          "black": "hsl(0, 0%, 0%)",
          "bodyBackground": "hsl(240, 33%, 99%)",
          "darkBlue": "hsl(213, 17%, 20%)",
          "darkGrey": "hsl(206,16%,60%)",
          "failure": Object {
            "dark": "#e74432",
            "darker": "#e42f1b",
            "default": "hsl(6, 79%, 65%)",
          },
          "googleBrandRed": "hsl(5, 81%, 56%)",
          "lightGrey": "hsl(207,22%,90%)",
          "mediumGrey": "hsl(206,23%,69%)",
          "mysticGrey": "hsl(216,45%,98%)",
          "paleGrey": "hsl(240, 33%, 99%)",
          "primary": Object {
            "dark": "#1873a0",
            "darker": "#14638a",
            "default": "hsl(200, 74%, 46%)",
          },
          "secondary": Object {
            "default": "hsl(0, 100%, 100%)",
          },
          "spaceGrey": "hsl(207,13%,45%)",
          "success": Object {
            "dark": "#6da333",
            "darker": "#60902d",
            "default": "hsl(89, 53%, 52%)",
          },
          "veryLightBlue": "hsl(220, 27%, 94%)",
          "warning": Object {
            "dark": "#f59a24",
            "darker": "#f48f0b",
            "default": "hsl(34, 91%, 65%)",
          },
          "white": "hsl(0, 100%, 100%)",
          "whiteOpacity": [Function],
        },
      }
    }
    type="submit"
  >
    <styled.button
      appearance="default"
      className=""
      disabled={false}
      fluid={false}
      icon={null}
      iconPosition="left"
      onClick={[Function]}
      size="default"
      theme={
        Object {
          "breakpoints": Object {
            "lg": 992,
            "md": 768,
            "sm": 576,
            "xl": 1200,
            "xs": 0,
          },
          "dimensions": Object {
            "big": "3.1rem",
            "bigInt": 3.1,
            "huge": "4.5rem",
            "hugeInt": 4.5,
            "medium": "1.5rem",
            "mediumInt": 1.5,
            "radius": "0.4rem",
            "radiusInt": 0.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "fonts": Object {
            "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
            "size": Object {
              "big": "1.6rem",
              "bigInt": 1.6,
              "default": "1.2rem",
              "defaultInt": 1.2,
              "h1": "3.6rem",
              "h1Int": 3.6,
              "h2": "3rem",
              "h2Int": 3,
              "h3": "2.6rem",
              "h3Int": 2.6,
              "h4": "2.2rem",
              "h4Int": 2.2,
              "h5": "2.0rem",
              "h5Int": 2,
              "h6": "1.8rem",
              "h6Int": 1.8,
              "huge": "6.4rem",
              "hugeInt": 6.4,
              "medium": "1.4rem",
              "mediumInt": 1.4,
              "small": "0.7rem",
              "smallInt": 0.7,
              "tiny": "0.3rem",
              "tinyInt": 0.3,
            },
            "spacing": Object {
              "big": "1.5px",
              "medium": "1px",
              "small": "0.5px",
            },
            "weight": Object {
              "normal": 400,
              "thick": 600,
              "thin": 200,
            },
          },
          "palette": Object {
            "avatar": Object {
              "alizarin": "hsl(6, 78%, 57%)",
              "carrot": "hsl(28, 80%, 52%)",
              "emerald": "hsl(145, 63%, 49%)",
              "river": "hsl(204, 70%, 53%)",
              "turquoise": "hsl(168, 76%, 42%)",
              "wisteria": "hsl(282, 44%, 47%)",
            },
            "black": "hsl(0, 0%, 0%)",
            "bodyBackground": "hsl(240, 33%, 99%)",
            "darkBlue": "hsl(213, 17%, 20%)",
            "darkGrey": "hsl(206,16%,60%)",
            "failure": Object {
              "dark": "#e74432",
              "darker": "#e42f1b",
              "default": "hsl(6, 79%, 65%)",
            },
            "googleBrandRed": "hsl(5, 81%, 56%)",
            "lightGrey": "hsl(207,22%,90%)",
            "mediumGrey": "hsl(206,23%,69%)",
            "mysticGrey": "hsl(216,45%,98%)",
            "paleGrey": "hsl(240, 33%, 99%)",
            "primary": Object {
              "dark": "#1873a0",
              "darker": "#14638a",
              "default": "hsl(200, 74%, 46%)",
            },
            "secondary": Object {
              "default": "hsl(0, 100%, 100%)",
            },
            "spaceGrey": "hsl(207,13%,45%)",
            "success": Object {
              "dark": "#6da333",
              "darker": "#60902d",
              "default": "hsl(89, 53%, 52%)",
            },
            "veryLightBlue": "hsl(220, 27%, 94%)",
            "warning": Object {
              "dark": "#f59a24",
              "darker": "#f48f0b",
              "default": "hsl(34, 91%, 65%)",
            },
            "white": "hsl(0, 100%, 100%)",
            "whiteOpacity": [Function],
          },
        }
      }
      type="submit"
    >
      <button
        className="c0"
        disabled={false}
        icon={null}
        onClick={[Function]}
        size="default"
        type="submit"
      >
        Text
      </button>
    </styled.button>
  </Button>
</Styled(Button)>
`;

exports[`<Button /> should render with another appearance 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  width: auto;
  padding: 0.8rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.4rem;
  color: hsl(0,100%,100%);
  cursor: pointer;
  outline: none;
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  background: hsl(200,74%,46%) linear-gradient( 0deg, hsla(0,100%,100%,0) 0%, hsla(0,100%,100%,0.1) 100% );
  border: 1px solid #1873a0;
  box-shadow: inset 0 0.2rem 0 0 hsla(0,100%,100%,0.1);
  padding: 0.8rem 1.6rem;
}

.c0 svg > path {
  fill: hsl(0,100%,100%);
}

.c0:hover:not([disabled]):not(:active) {
  background: hsl(200,74%,46%);
  box-shadow: none;
}

.c0:active {
  background-color: #1873a0;
  border: 1px solid #14638a;
  box-shadow: inset 0 0 0 0.1rem #14638a;
}

<Styled(Button)
  appearance="primary"
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "1.6rem",
          "bigInt": 1.6,
          "default": "1.2rem",
          "defaultInt": 1.2,
          "h1": "3.6rem",
          "h1Int": 3.6,
          "h2": "3rem",
          "h2Int": 3,
          "h3": "2.6rem",
          "h3Int": 2.6,
          "h4": "2.2rem",
          "h4Int": 2.2,
          "h5": "2.0rem",
          "h5Int": 2,
          "h6": "1.8rem",
          "h6Int": 1.8,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.4rem",
          "mediumInt": 1.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "avatar": Object {
          "alizarin": "hsl(6, 78%, 57%)",
          "carrot": "hsl(28, 80%, 52%)",
          "emerald": "hsl(145, 63%, 49%)",
          "river": "hsl(204, 70%, 53%)",
          "turquoise": "hsl(168, 76%, 42%)",
          "wisteria": "hsl(282, 44%, 47%)",
        },
        "black": "hsl(0, 0%, 0%)",
        "bodyBackground": "hsl(240, 33%, 99%)",
        "darkBlue": "hsl(213, 17%, 20%)",
        "darkGrey": "hsl(206,16%,60%)",
        "failure": Object {
          "dark": "#e74432",
          "darker": "#e42f1b",
          "default": "hsl(6, 79%, 65%)",
        },
        "googleBrandRed": "hsl(5, 81%, 56%)",
        "lightGrey": "hsl(207,22%,90%)",
        "mediumGrey": "hsl(206,23%,69%)",
        "mysticGrey": "hsl(216,45%,98%)",
        "paleGrey": "hsl(240, 33%, 99%)",
        "primary": Object {
          "dark": "#1873a0",
          "darker": "#14638a",
          "default": "hsl(200, 74%, 46%)",
        },
        "secondary": Object {
          "default": "hsl(0, 100%, 100%)",
        },
        "spaceGrey": "hsl(207,13%,45%)",
        "success": Object {
          "dark": "#6da333",
          "darker": "#60902d",
          "default": "hsl(89, 53%, 52%)",
        },
        "veryLightBlue": "hsl(220, 27%, 94%)",
        "warning": Object {
          "dark": "#f59a24",
          "darker": "#f48f0b",
          "default": "hsl(34, 91%, 65%)",
        },
        "white": "hsl(0, 100%, 100%)",
        "whiteOpacity": [Function],
      },
    }
  }
>
  <Button
    appearance="primary"
    className=""
    disabled={false}
    fluid={false}
    icon={null}
    iconPosition="left"
    onClick={[Function]}
    size="default"
    theme={
      Object {
        "breakpoints": Object {
          "lg": 992,
          "md": 768,
          "sm": 576,
          "xl": 1200,
          "xs": 0,
        },
        "dimensions": Object {
          "big": "3.1rem",
          "bigInt": 3.1,
          "huge": "4.5rem",
          "hugeInt": 4.5,
          "medium": "1.5rem",
          "mediumInt": 1.5,
          "radius": "0.4rem",
          "radiusInt": 0.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "fonts": Object {
          "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
          "size": Object {
            "big": "1.6rem",
            "bigInt": 1.6,
            "default": "1.2rem",
            "defaultInt": 1.2,
            "h1": "3.6rem",
            "h1Int": 3.6,
            "h2": "3rem",
            "h2Int": 3,
            "h3": "2.6rem",
            "h3Int": 2.6,
            "h4": "2.2rem",
            "h4Int": 2.2,
            "h5": "2.0rem",
            "h5Int": 2,
            "h6": "1.8rem",
            "h6Int": 1.8,
            "huge": "6.4rem",
            "hugeInt": 6.4,
            "medium": "1.4rem",
            "mediumInt": 1.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "spacing": Object {
            "big": "1.5px",
            "medium": "1px",
            "small": "0.5px",
          },
          "weight": Object {
            "normal": 400,
            "thick": 600,
            "thin": 200,
          },
        },
        "palette": Object {
          "avatar": Object {
            "alizarin": "hsl(6, 78%, 57%)",
            "carrot": "hsl(28, 80%, 52%)",
            "emerald": "hsl(145, 63%, 49%)",
            "river": "hsl(204, 70%, 53%)",
            "turquoise": "hsl(168, 76%, 42%)",
            "wisteria": "hsl(282, 44%, 47%)",
          },
          "black": "hsl(0, 0%, 0%)",
          "bodyBackground": "hsl(240, 33%, 99%)",
          "darkBlue": "hsl(213, 17%, 20%)",
          "darkGrey": "hsl(206,16%,60%)",
          "failure": Object {
            "dark": "#e74432",
            "darker": "#e42f1b",
            "default": "hsl(6, 79%, 65%)",
          },
          "googleBrandRed": "hsl(5, 81%, 56%)",
          "lightGrey": "hsl(207,22%,90%)",
          "mediumGrey": "hsl(206,23%,69%)",
          "mysticGrey": "hsl(216,45%,98%)",
          "paleGrey": "hsl(240, 33%, 99%)",
          "primary": Object {
            "dark": "#1873a0",
            "darker": "#14638a",
            "default": "hsl(200, 74%, 46%)",
          },
          "secondary": Object {
            "default": "hsl(0, 100%, 100%)",
          },
          "spaceGrey": "hsl(207,13%,45%)",
          "success": Object {
            "dark": "#6da333",
            "darker": "#60902d",
            "default": "hsl(89, 53%, 52%)",
          },
          "veryLightBlue": "hsl(220, 27%, 94%)",
          "warning": Object {
            "dark": "#f59a24",
            "darker": "#f48f0b",
            "default": "hsl(34, 91%, 65%)",
          },
          "white": "hsl(0, 100%, 100%)",
          "whiteOpacity": [Function],
        },
      }
    }
    type="button"
  >
    <styled.button
      appearance="primary"
      className=""
      disabled={false}
      fluid={false}
      icon={null}
      iconPosition="left"
      onClick={[Function]}
      size="default"
      theme={
        Object {
          "breakpoints": Object {
            "lg": 992,
            "md": 768,
            "sm": 576,
            "xl": 1200,
            "xs": 0,
          },
          "dimensions": Object {
            "big": "3.1rem",
            "bigInt": 3.1,
            "huge": "4.5rem",
            "hugeInt": 4.5,
            "medium": "1.5rem",
            "mediumInt": 1.5,
            "radius": "0.4rem",
            "radiusInt": 0.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "fonts": Object {
            "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
            "size": Object {
              "big": "1.6rem",
              "bigInt": 1.6,
              "default": "1.2rem",
              "defaultInt": 1.2,
              "h1": "3.6rem",
              "h1Int": 3.6,
              "h2": "3rem",
              "h2Int": 3,
              "h3": "2.6rem",
              "h3Int": 2.6,
              "h4": "2.2rem",
              "h4Int": 2.2,
              "h5": "2.0rem",
              "h5Int": 2,
              "h6": "1.8rem",
              "h6Int": 1.8,
              "huge": "6.4rem",
              "hugeInt": 6.4,
              "medium": "1.4rem",
              "mediumInt": 1.4,
              "small": "0.7rem",
              "smallInt": 0.7,
              "tiny": "0.3rem",
              "tinyInt": 0.3,
            },
            "spacing": Object {
              "big": "1.5px",
              "medium": "1px",
              "small": "0.5px",
            },
            "weight": Object {
              "normal": 400,
              "thick": 600,
              "thin": 200,
            },
          },
          "palette": Object {
            "avatar": Object {
              "alizarin": "hsl(6, 78%, 57%)",
              "carrot": "hsl(28, 80%, 52%)",
              "emerald": "hsl(145, 63%, 49%)",
              "river": "hsl(204, 70%, 53%)",
              "turquoise": "hsl(168, 76%, 42%)",
              "wisteria": "hsl(282, 44%, 47%)",
            },
            "black": "hsl(0, 0%, 0%)",
            "bodyBackground": "hsl(240, 33%, 99%)",
            "darkBlue": "hsl(213, 17%, 20%)",
            "darkGrey": "hsl(206,16%,60%)",
            "failure": Object {
              "dark": "#e74432",
              "darker": "#e42f1b",
              "default": "hsl(6, 79%, 65%)",
            },
            "googleBrandRed": "hsl(5, 81%, 56%)",
            "lightGrey": "hsl(207,22%,90%)",
            "mediumGrey": "hsl(206,23%,69%)",
            "mysticGrey": "hsl(216,45%,98%)",
            "paleGrey": "hsl(240, 33%, 99%)",
            "primary": Object {
              "dark": "#1873a0",
              "darker": "#14638a",
              "default": "hsl(200, 74%, 46%)",
            },
            "secondary": Object {
              "default": "hsl(0, 100%, 100%)",
            },
            "spaceGrey": "hsl(207,13%,45%)",
            "success": Object {
              "dark": "#6da333",
              "darker": "#60902d",
              "default": "hsl(89, 53%, 52%)",
            },
            "veryLightBlue": "hsl(220, 27%, 94%)",
            "warning": Object {
              "dark": "#f59a24",
              "darker": "#f48f0b",
              "default": "hsl(34, 91%, 65%)",
            },
            "white": "hsl(0, 100%, 100%)",
            "whiteOpacity": [Function],
          },
        }
      }
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        icon={null}
        onClick={[Function]}
        size="default"
        type="button"
      >
        Text
      </button>
    </styled.button>
  </Button>
</Styled(Button)>
`;

exports[`<Button /> should render withouth a problem 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  width: auto;
  padding: 0.8rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.4rem;
  color: hsl(0,100%,100%);
  cursor: pointer;
  outline: none;
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  color: hsl(213,17%,20%);
  background: none;
  padding: 0.8rem 1.6rem;
}

.c0 svg > path {
  fill: hsl(0,100%,100%);
}

.c0 svg > path {
  fill: hsl(213,17%,20%);
}

<Styled(Button)
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "1.6rem",
          "bigInt": 1.6,
          "default": "1.2rem",
          "defaultInt": 1.2,
          "h1": "3.6rem",
          "h1Int": 3.6,
          "h2": "3rem",
          "h2Int": 3,
          "h3": "2.6rem",
          "h3Int": 2.6,
          "h4": "2.2rem",
          "h4Int": 2.2,
          "h5": "2.0rem",
          "h5Int": 2,
          "h6": "1.8rem",
          "h6Int": 1.8,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.4rem",
          "mediumInt": 1.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "avatar": Object {
          "alizarin": "hsl(6, 78%, 57%)",
          "carrot": "hsl(28, 80%, 52%)",
          "emerald": "hsl(145, 63%, 49%)",
          "river": "hsl(204, 70%, 53%)",
          "turquoise": "hsl(168, 76%, 42%)",
          "wisteria": "hsl(282, 44%, 47%)",
        },
        "black": "hsl(0, 0%, 0%)",
        "bodyBackground": "hsl(240, 33%, 99%)",
        "darkBlue": "hsl(213, 17%, 20%)",
        "darkGrey": "hsl(206,16%,60%)",
        "failure": Object {
          "dark": "#e74432",
          "darker": "#e42f1b",
          "default": "hsl(6, 79%, 65%)",
        },
        "googleBrandRed": "hsl(5, 81%, 56%)",
        "lightGrey": "hsl(207,22%,90%)",
        "mediumGrey": "hsl(206,23%,69%)",
        "mysticGrey": "hsl(216,45%,98%)",
        "paleGrey": "hsl(240, 33%, 99%)",
        "primary": Object {
          "dark": "#1873a0",
          "darker": "#14638a",
          "default": "hsl(200, 74%, 46%)",
        },
        "secondary": Object {
          "default": "hsl(0, 100%, 100%)",
        },
        "spaceGrey": "hsl(207,13%,45%)",
        "success": Object {
          "dark": "#6da333",
          "darker": "#60902d",
          "default": "hsl(89, 53%, 52%)",
        },
        "veryLightBlue": "hsl(220, 27%, 94%)",
        "warning": Object {
          "dark": "#f59a24",
          "darker": "#f48f0b",
          "default": "hsl(34, 91%, 65%)",
        },
        "white": "hsl(0, 100%, 100%)",
        "whiteOpacity": [Function],
      },
    }
  }
>
  <Button
    appearance="default"
    className=""
    disabled={false}
    fluid={false}
    icon={null}
    iconPosition="left"
    onClick={[Function]}
    size="default"
    theme={
      Object {
        "breakpoints": Object {
          "lg": 992,
          "md": 768,
          "sm": 576,
          "xl": 1200,
          "xs": 0,
        },
        "dimensions": Object {
          "big": "3.1rem",
          "bigInt": 3.1,
          "huge": "4.5rem",
          "hugeInt": 4.5,
          "medium": "1.5rem",
          "mediumInt": 1.5,
          "radius": "0.4rem",
          "radiusInt": 0.4,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "fonts": Object {
          "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
          "size": Object {
            "big": "1.6rem",
            "bigInt": 1.6,
            "default": "1.2rem",
            "defaultInt": 1.2,
            "h1": "3.6rem",
            "h1Int": 3.6,
            "h2": "3rem",
            "h2Int": 3,
            "h3": "2.6rem",
            "h3Int": 2.6,
            "h4": "2.2rem",
            "h4Int": 2.2,
            "h5": "2.0rem",
            "h5Int": 2,
            "h6": "1.8rem",
            "h6Int": 1.8,
            "huge": "6.4rem",
            "hugeInt": 6.4,
            "medium": "1.4rem",
            "mediumInt": 1.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "spacing": Object {
            "big": "1.5px",
            "medium": "1px",
            "small": "0.5px",
          },
          "weight": Object {
            "normal": 400,
            "thick": 600,
            "thin": 200,
          },
        },
        "palette": Object {
          "avatar": Object {
            "alizarin": "hsl(6, 78%, 57%)",
            "carrot": "hsl(28, 80%, 52%)",
            "emerald": "hsl(145, 63%, 49%)",
            "river": "hsl(204, 70%, 53%)",
            "turquoise": "hsl(168, 76%, 42%)",
            "wisteria": "hsl(282, 44%, 47%)",
          },
          "black": "hsl(0, 0%, 0%)",
          "bodyBackground": "hsl(240, 33%, 99%)",
          "darkBlue": "hsl(213, 17%, 20%)",
          "darkGrey": "hsl(206,16%,60%)",
          "failure": Object {
            "dark": "#e74432",
            "darker": "#e42f1b",
            "default": "hsl(6, 79%, 65%)",
          },
          "googleBrandRed": "hsl(5, 81%, 56%)",
          "lightGrey": "hsl(207,22%,90%)",
          "mediumGrey": "hsl(206,23%,69%)",
          "mysticGrey": "hsl(216,45%,98%)",
          "paleGrey": "hsl(240, 33%, 99%)",
          "primary": Object {
            "dark": "#1873a0",
            "darker": "#14638a",
            "default": "hsl(200, 74%, 46%)",
          },
          "secondary": Object {
            "default": "hsl(0, 100%, 100%)",
          },
          "spaceGrey": "hsl(207,13%,45%)",
          "success": Object {
            "dark": "#6da333",
            "darker": "#60902d",
            "default": "hsl(89, 53%, 52%)",
          },
          "veryLightBlue": "hsl(220, 27%, 94%)",
          "warning": Object {
            "dark": "#f59a24",
            "darker": "#f48f0b",
            "default": "hsl(34, 91%, 65%)",
          },
          "white": "hsl(0, 100%, 100%)",
          "whiteOpacity": [Function],
        },
      }
    }
    type="button"
  >
    <styled.button
      appearance="default"
      className=""
      disabled={false}
      fluid={false}
      icon={null}
      iconPosition="left"
      onClick={[Function]}
      size="default"
      theme={
        Object {
          "breakpoints": Object {
            "lg": 992,
            "md": 768,
            "sm": 576,
            "xl": 1200,
            "xs": 0,
          },
          "dimensions": Object {
            "big": "3.1rem",
            "bigInt": 3.1,
            "huge": "4.5rem",
            "hugeInt": 4.5,
            "medium": "1.5rem",
            "mediumInt": 1.5,
            "radius": "0.4rem",
            "radiusInt": 0.4,
            "small": "0.7rem",
            "smallInt": 0.7,
            "tiny": "0.3rem",
            "tinyInt": 0.3,
          },
          "fonts": Object {
            "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
            "size": Object {
              "big": "1.6rem",
              "bigInt": 1.6,
              "default": "1.2rem",
              "defaultInt": 1.2,
              "h1": "3.6rem",
              "h1Int": 3.6,
              "h2": "3rem",
              "h2Int": 3,
              "h3": "2.6rem",
              "h3Int": 2.6,
              "h4": "2.2rem",
              "h4Int": 2.2,
              "h5": "2.0rem",
              "h5Int": 2,
              "h6": "1.8rem",
              "h6Int": 1.8,
              "huge": "6.4rem",
              "hugeInt": 6.4,
              "medium": "1.4rem",
              "mediumInt": 1.4,
              "small": "0.7rem",
              "smallInt": 0.7,
              "tiny": "0.3rem",
              "tinyInt": 0.3,
            },
            "spacing": Object {
              "big": "1.5px",
              "medium": "1px",
              "small": "0.5px",
            },
            "weight": Object {
              "normal": 400,
              "thick": 600,
              "thin": 200,
            },
          },
          "palette": Object {
            "avatar": Object {
              "alizarin": "hsl(6, 78%, 57%)",
              "carrot": "hsl(28, 80%, 52%)",
              "emerald": "hsl(145, 63%, 49%)",
              "river": "hsl(204, 70%, 53%)",
              "turquoise": "hsl(168, 76%, 42%)",
              "wisteria": "hsl(282, 44%, 47%)",
            },
            "black": "hsl(0, 0%, 0%)",
            "bodyBackground": "hsl(240, 33%, 99%)",
            "darkBlue": "hsl(213, 17%, 20%)",
            "darkGrey": "hsl(206,16%,60%)",
            "failure": Object {
              "dark": "#e74432",
              "darker": "#e42f1b",
              "default": "hsl(6, 79%, 65%)",
            },
            "googleBrandRed": "hsl(5, 81%, 56%)",
            "lightGrey": "hsl(207,22%,90%)",
            "mediumGrey": "hsl(206,23%,69%)",
            "mysticGrey": "hsl(216,45%,98%)",
            "paleGrey": "hsl(240, 33%, 99%)",
            "primary": Object {
              "dark": "#1873a0",
              "darker": "#14638a",
              "default": "hsl(200, 74%, 46%)",
            },
            "secondary": Object {
              "default": "hsl(0, 100%, 100%)",
            },
            "spaceGrey": "hsl(207,13%,45%)",
            "success": Object {
              "dark": "#6da333",
              "darker": "#60902d",
              "default": "hsl(89, 53%, 52%)",
            },
            "veryLightBlue": "hsl(220, 27%, 94%)",
            "warning": Object {
              "dark": "#f59a24",
              "darker": "#f48f0b",
              "default": "hsl(34, 91%, 65%)",
            },
            "white": "hsl(0, 100%, 100%)",
            "whiteOpacity": [Function],
          },
        }
      }
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        icon={null}
        onClick={[Function]}
        size="default"
        type="button"
      >
        Text
      </button>
    </styled.button>
  </Button>
</Styled(Button)>
`;
